attempting to fix menu error on mobile view and spacing about paragraph on mobile view

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');*/
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 *
 {
    margin: 0;
@@ -375,6 +375,12 @@
   {
     font-size: 20px;
   }
+
+  .content .contentBox p
+  {
+    margin-bottom: 20px;
+  }
+
   .content 
   {
     flex-direction: column;
